welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:8: error: expected class or object definition
def peinture() {
^PatternPicture:11: error: Unmatched closing brace '}' ignored here
	}
        ^