welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
    faireMotifmul(2)
   	monte()
  	faireMotifmul(2)
  	
  }
}
def peinture() {
  baisseBrosse()
  leveBrosse()
	}

def fairebg(c:Color) {
  setCouleurBrosse(c)
  avance()
  peinture()
 	gauche()
  avance()
  gauche()
  avance()
  peinture()
  gauche()
  avance()
  gauche()
  avancemul(2)
}

def fairebd(c:Color) {
  setCouleurBrosse(c)
  peinture()
  avance()
 	gauche()
  avance()
  peinture()
  gauche()
  avance()
  gauche()
  avance()
  gauche()
  reculemul(2)
  gauche()
  avancemul(2)
}

def fairehg(c:Color) {
  setCouleurBrosse(c)
  peinture()
  droite()
  avance()
 	gauche()
  avance()
  peinture()
  gauche()
  avance()
  gauche()
  avance()
  gauche()
  avancemul(3)
}

def fairehd(c:Color) {
  setCouleurBrosse(c)
  peinture()
  gauche()
  avance()
 	gauche()
  avance()
  peinture()
  gauche()
  avance()
  gauche()
  reculemul(2)
  gauche()
  reculemul(2)
  droite()
  avancemul(3)
}

def avancemul(nb:Int) {
  for (i<- 1 to nb) {
    avance()
  }
}

def reculemul(nb:Int) {
  for (i<- 1 to nb) {
    recule()
  }
}

def monte() {
	gauche()
	avancemul(4)
  droite()
	reculemul(7)
}

def faireMotif2() {
  fairebg(Color.red) 
  fairebd(Color.blue) 
  fairehg(Color.yellow)
  fairehd(Color.green)
    
} 

def faireMotifmul (nb: Int) {
  for (i<- 1 to nb) {
  	faireMotif2()
  	if (!estFaceMur) {
    	avance()
  	}
  }
}